--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+table {
+            border: 1px solid black;
+            border-spacing: 1px;
+            padding: 1px;
+        }
+        td {
+            border: 1px solid black;
+            padding: 5px;
+        }
+        .middle {
+            margin: 20px auto;
+            width: 80%;
+        }
+        .center {
+            text-align: center;
+        }
+        .right {
+            text-align: right;
+        }
+        .green {
+            background-color: green;
+            color: white;
+        }
+        .blue {
+            background-color: blue;
+            color: white;
+        }
