--- a/styles.css
+++ b/styles.css
@@ -25,4 +25,9 @@ table {
         .blue {
             background-color: blue;
             color: white;
+			
         }
+#t-image{
+	height:-250px;
+	width:-250px
+}
